--- a/dada/DADA/Template/templates/send_url_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_url_email_screen.tmpl
@@ -72,7 +72,7 @@
   <fieldset style="background:#e6e6e6"> 
   
 		 <legend>
-		  HTML Verson (Your Webpage)
+		  HTML Version (Your Webpage)
 		 </legend>
 		 
 		 <p>
