--- a/dada/DADA/Template/templates/subscription_form_widget.tmpl
+++ b/dada/DADA/Template/templates/subscription_form_widget.tmpl
@@ -50,7 +50,7 @@
     
         <p>
         <label for="list" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block" >
-        Choose a  list: 
+        Choose a Mailing List: 
         </label>
         <!-- tmpl_var list_popup_menu -->
         </p>
