--- a/dada/DADA/Template/templates/new_list_screen.tmpl
+++ b/dada/DADA/Template/templates/new_list_screen.tmpl
@@ -1,369 +1,369 @@
 <!-- begin new_list_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Create a New List" -->
+<!-- tmpl_set name="title" value="Create a New Mailing List" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
-<!-- tmpl_if name="errors" -->
+<!-- tmpl_if errors -->
 	
-	<p class="error">
-	 <!-- tmpl_var name="errors" -->  field<!-- tmpl_var name="ending" --> 
-	 on this form  <!-- tmpl_var name="err_word" --> filled out incorrectly 
-	 and must to be fixed. Please fix the error<!-- tmpl_var name="ending" --> 
-	 to successfully create your new list.
+	<div class="badweatherbox">
+	<p>
+	 <!-- tmpl_var errors -->  field<!-- tmpl_var ending --> 
+	 on this form  <!-- tmpl_var err_word --> filled out incorrectly 
+	 and must to be fixed.</p>
+	
+	<p> Please fix the error<!-- tmpl_var ending --> 
+	 to successfully create your new Mailing List.
 	</p>
+	</div>
+
 	
 <!-- /tmpl_if -->
 
 
-	
-
-	<h2>
-	 Please Fill in All the Fields Below, to Create Your New Mailing List: 
-	</h2>
-	
-	<!-- tmpl_unless name="help" -->
-	
-		<p style="text-align:right">
-		 <form action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-		  <input type="hidden" name="help" value="yes" />
-		  <input type="hidden" name="f"    value="new_list" />
-		  <input type="hidden" name="root_password" value="<!-- tmpl_var name="root_password" escape="HTML" -->" />
-		  <input type="submit" class="plain" value="Help!" />
-		 </form>
-		</p>
-	
-	<!-- /tmpl_unless -->
 
 
-	<form action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
+
+
+	<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 	 <input type="hidden" name="f"       value="new_list" />
 	 <input type="hidden" name="process" value="true" />
-	 <input type="hidden" name="root_password" value="<!-- tmpl_var name="root_password" escape="HTML" -->" />
+	 <input type="hidden" name="root_password" value="<!-- tmpl_var root_password escape="HTML" -->" />
 
+	<div class="clearskiesbox">
+		
+	<p>Please Fill in all the fields below, to create your new Mailing List</p>
+	<p>
+	 All information <em><strong>except</strong></em> the list's Short Name may be changed at a later time. 
+	</p>
+</div>
 
 <fieldset> 
 	
-	<p>
-	 All information <em><strong>except</strong></em> the list's Short Name may be changed later. 
-	</p>
-	 <h2>
+
+	 <legend>
 	  List Name
-	 </h2>
+	 </legend>
  
-	<!-- tmpl_if name="flags_list_name" -->
+	<!-- tmpl_if flags_list_name -->
 	 
-		 <p class="error">
-		  <em>
-		   You did not fill in a list name.
-		  </em>
+		<div class="badweatherbox">
+		 <p>
+			Please fill out your new Mailing List's name:
 		 </p>
+		</div>
 	 
 	<!-- /tmpl_if -->
 
-	<!-- tmpl_if name="flags_list_name_bad_characters" -->
-	 
-		 <p class="error">
-		  <em>
-		   Your list name contains &lt;'s, &gt;'s or, &quot;'s.
-		  </em>
+	<!-- tmpl_if flags_list_name_bad_characters -->
+	 	<div class="badweatherbox">
+		 <p>
+		   Your Mailing List Name contains &lt;'s, &gt;'s or, &quot;'s.
 		 </p>
+		</div>
 	 
 	<!-- /tmpl_if -->
 
-	<!-- tmpl_if name="help" -->
-	 
-		 <p class="positive">
-		  The name of your list is what both people and 
-		  <!-- tmpl_var name="PROGRAM_NAME" --> will use to tell your Mailing Lists from each other.
-		 </p>
-	 
-	<!-- /tmpl_if -->
- 
-	 <p>
-	  What is the Mailing List's name? You may change this name any time you like. The list name cannot 
-	  contain, &lt;'s, &gt;'s or, &quot;'s.</p>
-	  <p>
-	  <input type="text" name="list_name" value="<!-- tmpl_var name="list_name" escape="HTML" -->" class="full" maxlength="250" />
+		<div class="clearskiesbox">
+		
+		 <p>
+		  	What is the Mailing List's name? Use a unique name to help you tell your Mailing Lists apart.
+		</p> 
+		
+		<p>The Mailing List Name cannot contain, &lt;'s, &gt;'s or, &quot;'s.</p>
+		
+		</div>
+	 <p><label for="list_name">List Name:</label<br/>
+	  <input type="text" id="list_name" name="list_name" value="<!-- tmpl_var list_name escape="HTML" -->" class="full" maxlength="250" />
 	 </p>
+</fieldset> 
 
-	 <h2>
+<fieldset> 
+		
+	 <legend>
 	  List Short Name
-	 </h2>
+	 </legend>
  
-	<!-- tmpl_if name="flags_list_exists" -->
+	<!-- tmpl_if flags_list_exists -->
 	 
-		 <p class="error">
-		  <em>
+		<div class="badweatherbox">
+		 <p>
 		   This list Short Name already exists. Please choose a different Short Name.
-		  </em>
 		 </p>
+		</div>
 	 
 	<!-- /tmpl_if -->
 
-	<!-- tmpl_if name="flags_list" -->
-	 
-		 <p class="error">
-		  <em>
-		   You need to give your list a Short Name.
-		  </em>
+	<!-- tmpl_if flags_list -->
+	 	<div class="badweatherbox">
+		 <p>
+		   Please fill out a Short Name.
 		 </p>
+		</div>
 	 
 	<!-- /tmpl_if -->
 
-	<!-- tmpl_if name="flags_shortname_too_long" -->
+	<!-- tmpl_if flags_shortname_too_long -->
 	 
-		 <p class="error">
-		  <em>
+		<div class="badweatherbox">
+		 <p>
 		   Your list Short Name is longer than 16 characters.
-		  </em>
 		 </p>
+		</div>
 	 
 	<!-- /tmpl_if -->
 
-	<!-- tmpl_if name="flags_slashes_in_name" -->
+	<!-- tmpl_if flags_slashes_in_name -->
 	 
-		 <p class="error">
-		  <em>
+		<div class="badweatherbox">
+		 <p>
 		   Your list Short Name can't have slashes (&quot;/&quot; or &quot;\&quot;) in the name itself.
-		  </em>
 		 </p>
-	 
+	 	</div>
+	
 	<!-- /tmpl_if -->
 
-	<!-- tmpl_if name="flags_weird_characters" -->
+	<!-- tmpl_if flags_weird_characters -->
 	 
-		 <p class="error">
-		  <em>
+		<div class="badweatherbox">
+		 <p>
 		   Your list Short Name appears to have weird characters in the 
 		   name that may create problems. Please use only lowercase 
 		   alphanumeric characters (e.g.: abc123).
-		  </em>
 		 </p>
-	 
+	 	</div>
+	
 	<!-- /tmpl_if -->
 
-	<!-- tmpl_if name="flags_quotes" -->
-	 
-		 <p class="error">
-		  <em>
+	<!-- tmpl_if flags_quotes -->
+	 	<div class="badweatherbox">
+		 <p>
 		   Your list Short Name cannot contain quotes.
-		  </em>
 		 </p>
+		</div>
 	 
 	<!-- /tmpl_if -->
 
-	 <p>
-	  What is the list's &quot;Short Name&quot;?
-	  <br />
-	  The list Short Name will be used internally by <!-- tmpl_var name="PROGRAM_NAME" --> 
+
+	<div class="clearskiesbox">
+	<p>
+	  The List Short Name will be used internally by <!-- tmpl_var PROGRAM_NAME --> 
 	  and will also be used for subscription/unsubscription links and filenames. 
 	  You should make the Short Name <strong>lowercase</strong> 
 	  and no more than 16 characters. Use only alphanumeric characters.
   	</p>
-	<p>
-	  <input type="text" name="list" value="<!-- tmpl_var name="list" escape="HTML"-->" size="16" maxlength="16" />
-	 </p>
-	 <hr />
+</div>
 
-	 <h2>
-	  Password
-	 </h2>
+	<p><label for="list">List Short Name:</label><br />
+	  <input type="text" id="list" name="list" value="<!-- tmpl_var list escape="HTML"-->" size="16" maxlength="16" />
+	 </p>
+</fieldset> 
+<fieldset> 	
+	 <legend>
+	  List Password
+	 </legend>
  
-	<!-- tmpl_if name="flags_password" -->
-	 
-		 <p class="error">
-		  <em>
-		   You need to give your list a password.
-		  </em>
+	<!-- tmpl_if flags_password -->
+	
+	 	<div class="badweatherbox">
+		 <p>
+		   Please type a List Password.
 		 </p>
+		</div>
 	 
 	<!-- /tmpl_if -->
 
-	<!-- tmpl_if name="flags_password_is_root_password" -->
-	 
-		 <p class="error">
-		  <em>
+	<!-- tmpl_if flags_password_is_root_password -->
+	 	<div class="badweatherbox">
+		 <p>
 		   The password you have entered is the same as the <!-- tmpl_var PROGRAM_NAME --> 
 		   Root Password. Please pick a different password.
-		  </em>
 		 </p>
+		</div>
 	 
 	<!-- /tmpl_if -->
 
-	<!-- tmpl_if name="help" -->
-	 
-		 <p class="positive">
-		  A list password is used to protect your list and its 
-		  subscribers. You'll need to remember this password when 
-		  you log into your list control panel&nbsp;&#8212; the place where you 
-		  can set list options and send list messages. Please make 
-		  your password hard to guess, using upper and lowercase letters 
-		  mixed with numbers. The list password should be no more than 
+		<div class="clearskiesbox">
+		 <p>
+		  The List Password is used to protect your Mailing List.</p>
+		
+		<p>Please make 
+		  your List Password hard to guess, using upper and lowercase letters 
+		  mixed with numbers. The List Password should be no more than 
 		  16 characters long.
 		 </p>
-	 
-	<!-- /tmpl_if -->
+		</div>
+		
  
 	 <p>
-	  Please make a password to protect your list:
+		<label for="password">
+	  List Password:
+	</label>
   </p>
 	<p>
-	  <input type="password" name="password" value="<!-- tmpl_var name="password" escape="HTML"-->" size="16" maxlength="24" />
+	  <input type="password" id="password" name="password" value="<!-- tmpl_var password escape="HTML"-->" size="16" maxlength="24" />
 	 </p>
  
-	<!-- tmpl_if name="flags_retype_password" -->
+	<!-- tmpl_if flags_retype_password -->
 	 
-		 <p class="error">
-		  <em>
-		   You need to retype your list password.
-		  </em>
+		 <p>
+		   Please re-type your List Password.
 		 </p>
 	 
 	<!-- /tmpl_if -->
 
-	<!-- tmpl_if name="flags_password_ne_retype_password" -->
+	<!-- tmpl_if flags_password_ne_retype_password -->
 	 
-		 <p class="error">
-		  <em>
-		   The second password doesn't match the first password.
-		  </em>
+		<div class="badweatherbox">
+		 <p>
+		   Please make sure your List Password and what you've re-typed match.
 		 </p>
-	 
+	 	</div>
+	
 	<!-- /tmpl_if -->
  
-	 <p>
-	  Re-type the password to confirm:
+	 <p><label for="retype_password">
+	  Re-type your List Password:
+	</label>
   </p>
 	<p>
-	  <input type="password" name="retype_password" value="<!-- tmpl_var name="retype_password" escape="HTML"-->" size="16" maxlength="24" />
+	  <input type="password" id="retype_password" name="retype_password" value="<!-- tmpl_var retype_password escape="HTML"-->" size="16" maxlength="24" />
 	 </p>
-	 <hr />
 
-	 <h2>
-	  List Owner
-	 </h2>
+</fieldset> 
+<fieldset> 	
+	 <legend>
+  		List Owner Email Address
+	 </legend>
  
-	<!-- tmpl_if name="flags_invalid_list_owner_email" -->
+	<!-- tmpl_if flags_invalid_list_owner_email -->
 	 
-		 <p class="error">
-		  <em>
-		   You need to give a valid email address for the List Owner.
-		  </em>
+		<div class="badweatherbox">
+		 <p>
+		   Please type a valid email address for the List Owner.
 		 </p>
+		</div>
+		
 	 
 	<!-- /tmpl_if -->
 
-	<!-- tmpl_if name="help" -->
-	 
-		 <p class="positive">
-		  The list owner is the person in charge of the list. 
-		  Their email will be used for every message sent by <!-- tmpl_var name="PROGRAM_NAME" -->
-		  when working with your list.
+		<div class="clearskiesbox">
+		 <p>
+		  The List Owner's email address will be the email address all mass mailing messages
+		will be sent on behalf of.
 		 </p>
+		</div>
 	 
-	<!-- /tmpl_if -->
- 
+
+	 
 	 <p>
-	  What email address corresponds to the List Owner?
-	  (When emails are sent, they are sent on behalf of this email address.)
-  </p>
+  		<label for="list_owner_email">List Owner Email Address:</label>
+	</p>
 <p>
-	  <input type="text" name="list_owner_email" value="<!-- tmpl_var name="list_owner_email" escape="HTML"-->" class="full" maxlength="100" />
+	  <input type="text" id="list_owner_email" name="list_owner_email" value="<!-- tmpl_var list_owner_email escape="HTML"-->" class="full" maxlength="100" />
 	 </p>
-	 <hr />
-	 <h2>
+
+</fieldset>
+<fieldset>
+
+
+	 <legend>
 	  Description
-	</h2>
+	</legend>
  
-	<!-- tmpl_if name="flags_list_info" -->
+	<!-- tmpl_if flags_list_info -->
 	 
-		 <p class="error">
-		  <em>
-		   You need to give your list a description.
-		  </em>
+		<div class="badweatherbox">
+		 <p>
+		   Please type a Mailing List description.
 		 </p>
+		</div>
+		
 	 
 	<!-- /tmpl_if -->
 
-	<!-- tmpl_if name="help" -->
-	 
-		 <p class="positive">
-		  A description of your list will tell would-be subscribers 
+		<div class="clearskiesbox">
+		 <p>
+		  A description of your Mailing List will tell would-be subscribers 
 		  what your Mailing List is all about. This information will be shown on the 
-		  <!-- tmpl_var name="PROGRAM_NAME" --> main screen, as well as in 
+		  <!-- tmpl_var PROGRAM_NAME --> main screen, as well as in 
 	          confirmation emails sent to people wishing to subscribe.
 		 </p>
+		</div>
+		
 	 
-	<!-- /tmpl_if -->
  
 	 <p>
-	  Please write a brief description of your list:
+	  <label for="info">Description:</label>
 	  <br />
-	  <!-- wrap="virtual" --> 
-	  <textarea name="info" cols="50" rows="5"><!-- tmpl_var name="info" escape="HTML"--></textarea>
+	  <textarea id="info" name="info" cols="50" rows="5"><!-- tmpl_var info escape="HTML"--></textarea>
 	 </p>
-	 <hr />
+	
+</fieldset>
 
-	 <h2>
+
+<fieldset>
+
+
+	 <legend>
 	  Privacy Policy
-	 </h2>
+	 </legend>
  
-	<!-- tmpl_if name="flags_privacy_policy" -->
+	<!-- tmpl_if flags_privacy_policy -->
 	 
-		 <p class="error">
-		  <em>
-		   You need to give your list a privacy policy.
-		  </em>
+		<div class="badweatherbox">
+		 <p>
+		   Please type a Mailing List Privacy Policy.
 		 </p>
+		</div>
 	 
 	<!-- /tmpl_if -->
 
-	<!-- tmpl_if name="help" -->
-	 
-		 <p class="positive">
-		  A privacy policy allows a subscriber to know exactly how the 
+		<div class="clearskiesbox">
+		 <p>
+		  A Privacy Policy allows a subscriber to know exactly how the 
 		  information they submit (their email address, etc.) will be used.
 		 </p>
+		</div>
 	 
-	<!-- /tmpl_if -->
  
 	 <p>
-	  Please write a privacy policy for your list:
+	  <label for="privacy_policy">Privacy Policy:</label>
 	  <br />
-	  <!-- wrap="virtual" --> 
-	  <textarea name="privacy_policy" cols="50" rows="5"><!-- tmpl_var name="privacy_policy" escape="HTML"--></textarea>
+	  <textarea id="privacy_policy" name="privacy_policy" cols="50" rows="5"><!-- tmpl_var privacy_policy escape="HTML"--></textarea>
 	 </p>
-	 <hr />
 
-	 <h2>
+</fieldset>
+
+<fieldset>
+
+	 <legend>
 	  Physical Address
-	 </h2>
+	 </legend>
  
-	<!-- tmpl_if name="flags_physical_address" -->
+	<!-- tmpl_if flags_physical_address -->
+
 	  
-		 <p class="error">
-		  <em>
-		   You must associate a physical address to your list.
-		  </em>
+		<div class="badweatherbox">
+		 <p>
+		   Please type a Physical Address
 		 </p>
+		</div>
 	 
 	<!-- /tmpl_if -->
 
-	<!-- tmpl_if name="help" -->
-	 
-		 <p class="positive">
-		  A physical address ties your Mailing List to a known business 
+		<div class="clearskiesbox">
+		 <p>
+		  A Physical Address ties your Mailing List to a known business 
 		  or organization, even if that organization is yourself. It 
-		  also helps you conform to recent laws relating to mailing lists.
+		  also helps you conform to laws relating to mailing lists.
 		 </p>
+		</div>
 	 
-	<!-- /tmpl_if -->
  
 	 <p>
-	  Please enter the physical address associated with this mailing list:
+	  <label for="physical_address">Physical Address:</label>
 	  <br />
-	  <!-- wrap="virtual" --> 
-	  <textarea name="physical_address" cols="50" rows="5"><!-- tmpl_var name="physical_address" escape="HTML"--></textarea>
+	  <textarea id="physical_address" name="physical_address" cols="50" rows="5"><!-- tmpl_var physical_address escape="HTML"--></textarea>
 	 </p>
 
 </fieldset> 
