--- a/dada/DADA/Template/templates/subscription_options_screen.tmpl
+++ b/dada/DADA/Template/templates/subscription_options_screen.tmpl
@@ -81,6 +81,19 @@
  <legend>
 	  Black List
  </legend>
+
+<p>The Black List are addresses that are <strong>not allowed</strong> to be a part of your Subscribers List.</p>
+
+<p>Your Black List may hold both complete email addresses  (you@example.com) or 
+ a part of an email address (example.com) to you Black List.</p>
+
+<p>
+	Parts of addresses will match whole addresses - &quot;example.com&quot; will match, &quot;you@example.com&quot; and, &quot;someone.else@example.com&quot;
+</p>
+
+<p>
+	The Black List is primarily used to make sure that Subscribers that have been unsubscribed are not inadvertently re-subscribed. 
+</p>
 	 <table>
 	   <tr>
 	    <td>
@@ -161,6 +174,17 @@
 	 <legend>
       White List
 	 </legend>
+	
+<p>
+	The White List are addresses that are <strong>only</strong> allowed to be a part of your Subscribers List.</p>	
+	<p>Your White List may hold both complete email addresses  (you@example.com) or 
+	 a part of an email address (example.com) to you Black List.</p>
+
+	<p>
+		Parts of addresses will match whole addresses - &quot;example.com&quot; will match, &quot;you@example.com&quot; and, &quot;someone.else@example.com&quot;
+	</p>
+
+	
 	 <table>
 	   <tr>
 	    <td>
