--- a/dada/DADA/Template/templates/add_email_screen.tmpl
+++ b/dada/DADA/Template/templates/add_email_screen.tmpl
@@ -10,7 +10,7 @@ Membership (<!-- tmpl_var type_title -->)
 <!-- tmpl_if expr="(type eq 'list')" --> 
 	Invite
 	<!-- tmpl_if list_settings.enable_mass_subscribe -->
-		/ Add
+		/ Subscribe
 	<!-- /tmpl_if -->
 <!-- tmpl_else --> 
 	Add
