--- a/dada/DADA/Template/templates/subscription_options_screen.tmpl
+++ b/dada/DADA/Template/templates/subscription_options_screen.tmpl
@@ -117,7 +117,7 @@
 			    <td>
 			     <p>
 			      <label for="add_unsubs_to_black_list">
-			       Move Addresses to the Black List after they are Removed/Unsubscribed.
+			       Move Addresses to the Black List after they are Unsubscribed
 			      </label>
 			     </p>
 			    </td>
