--- a/dada/DADA/Template/templates/view_list_viewport_widget.tmpl
+++ b/dada/DADA/Template/templates/view_list_viewport_widget.tmpl
@@ -184,7 +184,7 @@
 				 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="blacklist_filter_form">
 				  <input type="hidden" name="f" value="filter_using_black_list" />
 				  <div class="buttonfloat">
-				   <input type="submit" class="small_button" value="Filter Your Subscribers Through The Black List..." />
+				   <input type="submit" class="small_button" value="Filter Subscribers Through the Black List" />
 				  </div>
 				 </form>
 				</td>
