Tweaks to the bouncing address modal menu

--- a/dada/DADA/Template/templates/bounce_search_results_modal_menu.tmpl
+++ b/dada/DADA/Template/templates/bounce_search_results_modal_menu.tmpl
@@ -9,17 +9,14 @@
 
 
 <form action="<!-- tmpl_var S_PROGRAM_URL -->"> 
-	
-<div class="buttonfloat">
+
 
 <input type="hidden" name="address" value="<!-- tmpl_var email ESCAPE=HTML -->" />
 <input type="hidden" name="f"     value="process_bouncing_addresses" />
 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
 
-<input type="submit" name="process" class="processing"  value="-> Move Address Back to Subscribers" />
-<input type="submit" name="process" class="processing"  value="[x] Remove Address" />
-</div>
-<div class="floatclear"></div>
+<input type="submit" name="process" class="processing"  value="&#8594; Move Bouncing Address Back to Subscribers" />
+<input type="submit" name="process" class="cautionary"  value="&#8855; Remove Bouncing Address" />
 </form>
 
 
