--- a/dada/DADA/Template/templates/add_screen.tmpl
+++ b/dada/DADA/Template/templates/add_screen.tmpl
@@ -149,7 +149,7 @@
 		<input type="hidden" name="method" value="via_add_one" /> 
 
 		 <p>
-		     <label for="email" style="width: 20em;float: left;text-align: right;margin-right: 0.5em;display: block">
+		     <label for="email" class="label_profile_fields">
 		      Email Address:
 		     </label>
 		    <input type="text" name="email" id="email" value=""  />
@@ -158,7 +158,7 @@
 		
 		<!-- tmpl_loop fields --> 
 		    <p>
-		     <label for="<!-- tmpl_var name escape=HTML -->" style="width: 20em;float: left;text-align: right;margin-right: 0.5em;display: block">
+		     <label for="<!-- tmpl_var name escape=HTML -->" class="label_profile_fields">
 		      <!-- tmpl_var label escape="HTML" --> (<!-- tmpl_var name escape="HTML" -->): 
 		     </label>
 		    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->"  />
