--- a/dada/DADA/Template/templates/membership.tmpl
+++ b/dada/DADA/Template/templates/membership.tmpl
@@ -171,7 +171,7 @@ function mailing_list_history(){
 
 		<!-- tmpl_loop fields --> 
 		    <p>
-		     <label for="<!-- tmpl_var name escape=HTML -->" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
+		     <label for="<!-- tmpl_var name escape=HTML -->" class="label_profile_fields">
 		      <!-- tmpl_var label escape=HTML --> (<!-- tmpl_var name escape=HTML -->): 
 		     </label>
 		    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->" disabled="disabled" />
@@ -185,7 +185,7 @@ function mailing_list_history(){
 		</p>
 		<!-- tmpl_loop fields --> 
 		    <p>
-		     <label for="<!-- tmpl_var name escape=HTML -->" style="width: 21em;float: left;text-align: right;margin-right: 0.5em;display: block">
+		     <label for="<!-- tmpl_var name escape=HTML -->" class="label_profile_fields">
 		      <!-- tmpl_var label escape=HTML --> (<!-- tmpl_var name escape=HTML -->): 
 		     </label>
 		    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->" />
