--- a/dada/DADA/Template/templates/view_list_viewport_widget.tmpl
+++ b/dada/DADA/Template/templates/view_list_viewport_widget.tmpl
@@ -85,7 +85,7 @@
 					<!-- tmpl_if EXPR="(type eq 'list')" -->
 						Invite
 						<!-- tmpl_if list_settings.enable_mass_subscribe -->
-				/ Add
+						/ Subscribe
 						<!-- /tmpl_if -->
 					<!-- tmpl_else --> 
 						Add
