This adds a new option to allow you to specify if you want the list owner to receive a copy of your mass mailing, as well as some usability problems with the mass mailing buttons - they'll be labeled different, depending on if you're sending a mass mailing or a list invitation, as well as changing the text if you're simply archiving (and not sending) a message.

--- a/dada/DADA/Template/templates/mass_mailing_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/mass_mailing_preferences_screen.tmpl
@@ -116,7 +116,21 @@
 	 </tr>
 	
 	
-
+	 <tr>
+	  <td>
+	   <input type="checkbox" name="mass_mailing_send_to_list_owner" id="mass_mailing_send_to_list_owner" value="1" <!-- tmpl_if list_settings.mass_mailing_send_to_list_owner -->checked="checked"<!--/tmpl_if--> />
+	  </td>
+	  <td>
+	   <p>
+	    <label for="mass_mailing_send_to_list_owner">
+	     Send Mass Mailing Messages to the List Owner
+	    </label>
+	    <br />
+		The List Owner will receive a copy of all mass mailings sent to your Mailing List. 
+	   </p>
+	  </td>
+	 </tr>
+	
 
 	 <tr>
 	  <td>
@@ -125,10 +139,10 @@
 	  <td>
 	   <p>
 	    <label for="get_finished_notification">
-	     Receive Finishing Message
+	     Send Finishing Message
 	    </label>
 	    <br />
-	    Receive notice via email when <!-- tmpl_var PROGRAM_NAME --> has sent all the messages of a mailout.
+	    The List Owner will be emailed when all the messages of mass mailings have been sent.
 	   </p>
 	  </td>
 	 </tr>
