--- a/dada/DADA/Template/templates/send_email_archive_options_widget.tmpl
+++ b/dada/DADA/Template/templates/send_email_archive_options_widget.tmpl
@@ -6,12 +6,6 @@
 
 <input type="hidden" name="local_archive_options_present" value="1" /> 
 
-
-
-
-
-
-
 <fieldset>
 
 <legend><a href="#" onclick="toggleDisplay('archive_options_widget');return false;">
@@ -26,7 +20,7 @@
   <tr> 
    <td>
     <p>
-     <input type="checkbox" name="archive_message" id="archive_message" <!-- tmpl_if list_settings.archive_messages -->checked="checked"<!--/tmpl_if--> value="1" />
+     <input type="checkbox" name="archive_message" id="archive_message" <!-- tmpl_if list_settings.archive_messages -->checked="checked"<!--/tmpl_if--> value="1" onChange="ChangeMassMailingButtonLabel()" />
     </p>
    </td>
    <td>
@@ -40,13 +34,13 @@
   <tr>
    <td>
     <p>
-     <input type="checkbox" name="archive_no_send" id="archive_no_send" value="1" />
+     <input type="checkbox" name="archive_no_send" id="archive_no_send" value="1" onChange="ChangeMassMailingButtonLabel()" />
     </p>
    </td>
    <td>
     <p>
      <label for="archive_no_send">
-      Archive but DO NOT send
+      Only Archive, Don't Send
      </label>
     </p>
     
@@ -191,10 +185,13 @@
          <option value="2009">2009</option>
          <option value="2010">2010</option>
          <option value="2011">2011</option>
-         <option value="2012">2012</option>
+         <option value="2012" selected="selected">2012</option>
          <option value="2013">2013</option>
          <option value="2014">2014</option>
          <option value="2015">2015</option>
+         <option value="2016">2016</option>
+         <option value="2017">2017</option>
+         <option value="2018">2018</option>
 
 
         </select> - 
