These changes relate to the, "unsubscribed", "subscribed" and, "last archive sent" emails that can be sent, if you have that enabled for mass subscribers.
Last archive sent was broken, the pref never was looked at, and an archived message was sent, even if no archive message needed to be. What? 

Also, the message were copied to the list owner, which is a very confusing thing in this context, so that's been stopped.

--- a/dada/DADA/Template/templates/add_email_screen.tmpl
+++ b/dada/DADA/Template/templates/add_email_screen.tmpl
@@ -40,7 +40,7 @@ Membership (<!-- tmpl_var type_title -->)
 				<ul> 
 					<li>
 					 <p>
-						Addresses <strong>Subscribed</strong> will be sent a, "Welcome" message. 
+						Addresses <strong>Subscribed</strong> will be sent a, &quot;Welcome&quot; message. 
 					</p> 
 				</ul> 
 			<!-- /tmpl_if --> 
@@ -51,9 +51,9 @@ Membership (<!-- tmpl_var type_title -->)
 				 <p>
 						Addresses <strong>Subscribed</strong> will be sent the latest archived message.				
 				</p> 
-			</ul>		
+			</ul>	
+			<!-- /tmpl_if --> 	
 		</div>
-		<!-- /tmpl_if --> 
 	<!-- /tmpl_if --> 
 <!-- /tmpl_if -->
 
