Random changes in all these things.

--- a/dada/DADA/Template/templates/add_screen.tmpl
+++ b/dada/DADA/Template/templates/add_screen.tmpl
@@ -89,7 +89,8 @@
 			<p>
 				<strong>Warning!</strong>
 			</p> 
-			</p>You have a limit of <!-- tmpl_var list_settings.subscription_quota -->
+			
+			<p>You have a limit of <!-- tmpl_var list_settings.subscription_quota -->
 			 subscriber(s) maximum allowed onto this Mailing List. You currently have 
 			 <!-- tmpl_var num_subscribers --> Subscriber(s).
 			</p>
