--- a/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
@@ -268,7 +268,7 @@ Current Mass Mailings:
 	    <input type="hidden" name="id" value="<!-- tmpl_var message_id -->" /> 
 	    <input type="hidden" name="type" value="<!-- tmpl_var message_type -->" /> 
 	    <input type="hidden" name="process" value="kill" /> 
-	    <input type="submit" value="[x]" onclick="return killMonitoredSending(this.form);" <!-- tmpl_unless is_paused --><!-- tmpl_if sending_done -->disabled="disabled" class="disabled"<!-- tmpl_else --> class="alertive" <!--/tmpl_if --><!-- tmpl_else --> class="alertive" <!--/tmpl_unless --> title="Click to permanently STOP this mass mailing"  />
+	    <input type="submit" value="&#8855;" onclick="return killMonitoredSending(this.form);" <!-- tmpl_unless is_paused --><!-- tmpl_if sending_done -->disabled="disabled" class="disabled"<!-- tmpl_else --> class="alertive" <!--/tmpl_if --><!-- tmpl_else --> class="alertive" <!--/tmpl_unless --> title="Click to permanently STOP this mass mailing"  />
 	    </form> 
 		<!-- /tmpl_if --> 
 		
