--- a/dada/DADA/Template/templates/sending_monitor_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_screen.tmpl
@@ -99,7 +99,7 @@
 	    <input type="hidden" name="id" value="<!-- tmpl_var message_id -->" /> 
 	    <input type="hidden" name="type" value="<!-- tmpl_var message_type -->" /> 
 	    <input type="hidden" name="process" value="kill" /> 
-	    <input type="submit" value="[x] STOP Mailing" onclick="return killMonitoredSending(this.form);" <!-- tmpl_unless is_paused --><!-- tmpl_if sending_done -->disabled="disabled" class="disabled"<!-- tmpl_else --> class="alertive" <!--/tmpl_if --><!-- tmpl_else --> class="alertive" <!--/tmpl_unless --> />
+	    <input type="submit" value="&#8855; STOP Mailing" onclick="return killMonitoredSending(this.form);" <!-- tmpl_unless is_paused --><!-- tmpl_if sending_done -->disabled="disabled" class="disabled"<!-- tmpl_else --> class="alertive" <!--/tmpl_if --><!-- tmpl_else --> class="alertive" <!--/tmpl_unless --> />
 	    </form> 
 
 	</div> 
